# cmdline

./: .gitignore  CLAUDE.md  CMDLINE_CONSTEXPR_GUIDE.md  CMakeLists.txt  CONSTEXPR_DESIGN.md  MODE_MANAGER_DESIGN.md  Makefile  RANGE_VALIDATION.md  README.md  cmdline.cpp  cmdline.h  cmdline_constexpr.h  cmdline_constexpr.h.original  cmdline_types.h  compile_commands.json  constexpr_test.cpp  example.cpp  example_constexpr.cpp  test_array_range.cpp  test_default_values  test_default_values.cpp  test_hierarchy  test_hierarchy.cpp  test_hierarchy_hide_options  test_hierarchy_hide_options.cpp  test_hierarchy_multi  test_hierarchy_multi.cpp  test_int_range.cpp  test_lambda_types.cpp  test_mode_execute_command  test_mode_execute_command.cpp  test_mode_manager.cpp  test_option_matching.cpp  test_option_value  test_option_value.cpp  test_parse_invoke.cpp  test_subcommands.cpp  test_typed_options.cpp  test_variadic_groups.cpp
.github/workflows/: ci.yml
docs/: CMDLINE_CONSTEXPR_GUIDE.md  Doxyfile  HELP_QUERY.md  PARTIAL_MATCHING.md  RANGE_VALIDATION.md  SESSION_COMMANDS.md  TYPED_OPTIONS_DESIGN.md  cmdline_presentation.md  generate_docs.sh
examples/: CMakeLists.txt  example.cpp  example_constexpr.cpp
include/cmdline/: CMakeLists.txt  cmdline_components.h  cmdline_hdr_only.h
include/cmdline/details/: cmdline_components.h  cmdline_types.h
src/: CMakeLists.txt  cmdline.h
tests/: CMakeLists.txt  test_array_range.cpp  test_help_query.cpp  test_lambda_types.cpp  test_partial_matching.cpp  test_subcommands.cpp
tests/scripts/: run_tests.py  test_help_query.sh  test_options.sh  test_parse_fail.sh  test_partial_matching.sh  test_simple.sh
tests/src/: test_comprehensive_coverage.cpp  test_default_values.cpp  test_full_coverage.cpp  test_help_query.cpp  test_hierarchy.cpp  test_hierarchy_hide_options.cpp  test_hierarchy_multi.cpp  test_int_range.cpp  test_interactive_cli.cpp  test_mode_execute_command.cpp  test_mode_manager.cpp  test_option_matching.cpp  test_option_value.cpp  test_output_streams.cpp  test_parse_fail.cpp  test_parse_invoke.cpp  test_partial_matching.cpp  test_typed_options.cpp  test_variadic_groups.cpp
